--- a/src/app/admin/pages/project-payment/project-payment.component.html
+++ b/src/app/admin/pages/project-payment/project-payment.component.html
@@ -12,21 +12,21 @@
             <h5 class="m-0 font-weight-bold text-primary"> Project List </h5>
         </div>
         <div class="card-body">
-            <div class="row" style="margin-bottom: 10px;">
-                <div class="col-lg-3">
+            <div class="row mrgn-btm-15">
+                <div class="col-lg-2">
                     <select name="year" class="form-select col-lg-12" (change)="onGridYearChange($event.target)">
                         <option *ngFor="let year of years" [value]="year.id">{{ year.name }}</option>
                     </select>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-2">
                     <select name="month" class="form-select col-lg-12" (change)="onGridMonthChange($event.target)">
                         <option *ngFor="let month of months" [value]="month.id">{{ month.name }}</option>
                     </select>
                 </div>
 
-                <div class="col-lg-6">
-                    <button class="btn btn-success" (click)="addProjectPayment()" style="float:right">Add
-                        Project Payment</button>
+                <div class="col-lg-8 algn-right">
+                    <button class="btn btn-success" (click)="addProjectPayment()">
+                        Add Project Payment</button>
                 </div>
             </div>
             <div class="row">
@@ -38,7 +38,7 @@
                                 <th scope="col">Received Amount</th>
                                 <th scope="col">Month/Year</th>
                                 <th scope="col">Payment Date</th>
-                                <th style="text-align: center;">Action</th>
+                                <th class="action-button">Action</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -55,11 +55,11 @@
                                 <td>
                                     {{ payment.date}}
                                 </td>
-                                <td style="text-align: center;">
-                                    <a href="javascript:void(0)" style="margin-right: 10px;" ngbTooltip="Edit">
+                                <td class="action-button">
+                                    <a href="javascript:void(0)" ngbTooltip="Edit">
                                         <fa-icon [icon]="faEdit"></fa-icon>
                                     </a>
-                                    <a href="javascript:void(0)" style="margin-right: 10px;" ngbTooltip="Delete">
+                                    <a href="javascript:void(0)" ngbTooltip="Delete">
                                         <fa-icon [icon]="faDelete"></fa-icon>
                                     </a>
                                 </td>
@@ -142,12 +142,10 @@
                         </div>
                     </div>
 
-                    <div class="row">
+                    <div class="row submit-buttons">
                         <div class="form-group col-lg-12">
-                            <input type="button" *ngIf="isAddNew" class="btn btn-success" value="Save"
-                                style="margin-right: 10px; width:100px;" />
-
-                            <input type="button" class="btn btn-outline-primary" value="Cancel" style="width:100px;"
+                            <input type="submit" class="btn btn-success" value="Save" />
+                            <input type="button" class="btn btn-outline-primary" value="Cancel"
                                 (click)="isShown = true" />
                         </div>
                     </div>
