--- a/src/app/admin/pages/employee/employee.component.html
+++ b/src/app/admin/pages/employee/employee.component.html
@@ -11,11 +11,10 @@
         <div class="card-header py-3">
             <h5 class="m-0 font-weight-bold text-primary">Employer List</h5>
         </div>
-
         <div class="card-body">
-            <div class="row">
-                <div class="col-lg-12">
-                    <button class="btn btn-primary btn-sm" (click)="addEmployer()">Add
+            <div class="row mrgn-btm-15">
+                <div class="col-lg-12 algn-right">
+                    <button class="btn btn-primary btn-sm" (click)="addEmployee()">Add
                         Employee</button>
                 </div>
             </div>
@@ -28,7 +27,7 @@
                                 <th scope="col">Eamil Id</th>
                                 <th scope="col">Start Date</th>
                                 <th scope="col">Designation</th>
-                                <th>Action</th>
+                                <th class="action-button">Action</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -37,11 +36,11 @@
                                 <td>{{emp.emailId}}</td>
                                 <td>{{emp.startDate}}</td>
                                 <td>{{emp.designation}}</td>
-                                <td>
-                                    <a href="javascript:void(0)"  ngbTooltip="Edit">
+                                <td class="action-button">
+                                    <a href="javascript:void(0)" ngbTooltip="Edit">
                                         <fa-icon [icon]="faEdit"></fa-icon>
                                     </a>
-                                    <a href="javascript:void(0)"  ngbTooltip="Delete">
+                                    <a href="javascript:void(0)" ngbTooltip="Delete">
                                         <fa-icon [icon]="faDelete"></fa-icon>
                                     </a>
                                 </td>
@@ -56,7 +55,7 @@
     <div *ngIf="!isShown">
         <!-- Card Header - Dropdown -->
         <div class="card-header ">
-            <h5 class="m-0 font-weight-bold text-primary">Add Employee</h5>
+            <h5 class="m-0 font-weight-bold text-primary" >Add Employee</h5>
 
         </div>
         <!-- Card Body -->
@@ -119,8 +118,8 @@
                 <div class="row">
                     <div class="form-group col-lg-12">
                         <label for="address">Address</label>
-                        <input type="text" name="address" Name="address" placeholder="Address" class="form-control "
-                            autocomplete="off" maxlength="100">
+                        <textarea type="text" name="address" Name="address" placeholder="Address" class="form-control "
+                            autocomplete="off" maxlength="100"></textarea>
                     </div>
                 </div>
                 <div class="row">
@@ -165,9 +164,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row submit-buttons">
                     <div class="form-group col-lg-12">
-                        <input type="button"  class="btn btn-success" value="Save" />
+                        <input type="submit"  class="btn btn-success" value="Save" />
                         <input type="button" class="btn btn-outline-primary" value="Cancel" (click)="isShown = true" />
                     </div>
                 </div>
