--- a/src/app/admin/pages/employee-payment/employee-payment.component.html
+++ b/src/app/admin/pages/employee-payment/employee-payment.component.html
@@ -84,11 +84,18 @@
                     </div>
                     <div class="form-group col-lg-6">
                         <label for="amount">Amount</label>
-                        <input class="form-control" type="text" id="amount" placeholder="Amount" mask="000000"
-                            autocomplete="off">
+                        <div class="my-1">
+                            <label class="sr-only" for="amount">Amount</label>
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <div class="input-group-text">₹</div>
+                                </div>
+                                <input type="text" class="form-control" id="amount" placeholder="XXXXXXX"
+                                    autocomplete="off" mask="0000000">
+                            </div>
+                        </div>
                     </div>
                 </div>
-
 
                 <div class="row">
                     <div class="form-group col-lg-4">
