--- a/src/app/admin/pages/employee/employee.component.html
+++ b/src/app/admin/pages/employee/employee.component.html
@@ -24,7 +24,7 @@
                         <thead>
                             <tr>
                                 <th scope="col">Name</th>
-                                <th scope="col">Eamil Id</th>
+                                <th scope="col">Eamil Address</th>
                                 <th scope="col">Start Date</th>
                                 <th scope="col">Designation</th>
                                 <th class="action-button">Action</th>
@@ -33,7 +33,7 @@
                         <tbody>
                             <tr *ngFor="let emp of employer">
                                 <td>{{emp.name}}</td>
-                                <td>{{emp.emailId}}</td>
+                                <td>{{emp.emailAddress}}</td>
                                 <td>{{emp.startDate}}</td>
                                 <td>{{emp.designation}}</td>
                                 <td class="action-button">
@@ -55,8 +55,7 @@
     <div *ngIf="!isShown">
         <!-- Card Header - Dropdown -->
         <div class="card-header ">
-            <h5 class="m-0 font-weight-bold text-primary" >Add Employee</h5>
-
+            <h5 class="m-0 font-weight-bold text-primary">Add Employee</h5>
         </div>
         <!-- Card Body -->
         <div class="card-body">
@@ -105,9 +104,9 @@
                 </div>
                 <div class="row">
                     <div class="form-group col-lg-6">
-                        <label for="emailid">Email Id</label>
-                        <input class="form-control" type="text" id="emailid" placeholder="Email Id" autocomplete="off"
-                            maxlength="50">
+                        <label for="emailAddress">Email Address</label>
+                        <input class="form-control" type="text" id="emailAddress" placeholder="Email Address" autocomplete="off"
+                            maxlength="100">
                     </div>
                     <div class="form-group col-lg-6">
                         <label for="mobile">Mobile</label>
@@ -118,17 +117,15 @@
                 <div class="row">
                     <div class="form-group col-lg-12">
                         <label for="address">Address</label>
-                        <textarea type="text" name="address" Name="address" placeholder="Address" class="form-control "
-                            autocomplete="off" maxlength="100"></textarea>
+                        <textarea type="text" name="address" placeholder="Address" class="form-control "
+                            autocomplete="off" maxlength="200"></textarea>
                     </div>
                 </div>
                 <div class="row">
                     <div class="form-group col-lg-4">
                         <label for="city">City</label>
-                        <select name="city" class="form-select col-lg-12" (change)="onDesignationChange($event.target)">
-                            <option *ngFor="let city of citys" [value]="city.id">
-                                {{city.name}}</option>
-                        </select>
+                        <input class="form-control" type="text" id="city" placeholder="City" autocomplete="off"
+                        maxlength="50">
                     </div>
                     <div class="form-group col-lg-4">
                         <label for="state">State</label>
@@ -140,7 +137,7 @@
                     </div>
                     <div class="form-group col-lg-4">
                         <label for="pincode">Pin Code</label>
-                        <input class="form-control" type="text" id="pincode" placeholder="Pin code" mask="000000"
+                        <input class="form-control" type="text" id="pincode" placeholder="XXXXXX" mask="000000"
                             autocomplete="off">
                     </div>
                 </div>
