--- a/src/app/admin/pages/project/project.component.html
+++ b/src/app/admin/pages/project/project.component.html
@@ -4,8 +4,6 @@
     </h1>
 </div>
 
-
-
 <!-- Content Row -->
 
 <div class="card shadow mb-4">
@@ -15,9 +13,10 @@
         </div>
 
         <div class="card-body">
-            <div class="row" >
-                <div class="col-lg-12">
-                    <button class="btn btn-primary btn-sm" (click)="addProject()" >Add
+
+            <div class="row mrgn-btm-15">
+                <div class="col-lg-12 algn-right">
+                    <button class="btn btn-primary btn-sm" (click)="addProject()">Add
                         Project</button>
                 </div>
             </div>
@@ -31,12 +30,11 @@
                                 <th scope="col">Start Date</th>
                                 <th scope="col">Status</th>
                                 <th scope="col">Project Type </th>
-                                <th >Action</th>
+                                <th class="action-button">Action</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr *ngFor="let project of projectlist">
-
                                 <td>
                                     {{project.name}}
                                 </td>
@@ -47,15 +45,14 @@
                                     {{ project.status}}
                                 </td>
                                 <td>
-
                                     {{ project.type}}
                                 </td>
 
-                                <td >
-                                    <a href="javascript:void(0)"  ngbTooltip="Edit">
+                                <td class="action-button">
+                                    <a href="javascript:void(0)" ngbTooltip="Edit">
                                         <fa-icon [icon]="faEdit"></fa-icon>
                                     </a>
-                                    <a href="javascript:void(0)"  ngbTooltip="Delete">
+                                    <a href="javascript:void(0)" ngbTooltip="Delete">
                                         <fa-icon [icon]="faDelete"></fa-icon>
                                     </a>
                                 </td>
@@ -82,107 +79,110 @@
 
                     <div class="form-group col-lg-6">
                         <label for="projectName">Project Owner </label>
-                        <input type="text" class="form-control" id="projectowner" placeholder="Project Owner"
+                        <input type="text" class="form-control" id="projectOwner" placeholder="Project Owner"
                             maxlength="20">
                     </div>
-                </div>
 
-                <div class="row">
-                    <div class="form-group col-lg-12">
-                        <label for="projectdiscrption">Project Discription </label>
-                        <input type="textarea" class="form-control" id="txtproject" placeholder="Project Discription"
-                            maxlength="200">
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="form-group col-lg-6">
-                        <label for="technology">Technology </label>
-                        <div class="btn-group" data toggle="buttons"></div>
-                        <label class="btn btn-primary-active">
-                            <input type="checkbox" checked autocomplete="off">Angular
-                        </label>
-                        <label class="btn btn-primary-active">
-                            <input type="checkbox"  autocomplete="off">.NET Core
-                        </label>
-                        <label class="btn btn-primary-active">
-                            <input type="checkbox"  autocomplete="off">HTML
-                        </label>
-                    </div>
-
-
-                    <div class="form-group col-lg-6">
-                        <label for="project type">Project Type </label>
-                        <select name="month" class="form-select col-lg-12" (change)="onProjectChange($event.target)">
-                            <option *ngFor="let type of types" [value]="type.id">{{ type.name }}</option>
-                        </select>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="form-group col-lg-6">
-                        <label for="duration">Duration </label>
-                        <select name="duration" class="form-select col-lg-12"
-                            (change)="onDurationChange($event.target)">
-                            <option *ngFor="let duration of durations" [value]="duration.id">
-                                {{duration.name}}
-                            </option>
-                        </select>
-                    </div>
-
-                    <div class="form-group col-lg-6">
-                        <label for="status">Status </label>
-                        <select name="status" class="form-select col-lg-12" (change)="onStatusChange($event.target)">
-                            <option *ngFor="let status of status" [value]="status.id">{{status.name}}
-                            </option>
-                        </select>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="form-group col-lg-6">
-                        <label for="startDate">Start Date </label>
-                        <div class="input-group">
-                            <input class="form-control" placeholder="DD/MM/YYYY" name="dp" ngbDatepicker
-                                #d="ngbDatepicker" id="startDate" mask="00/00/0000" autocomplete="off">
-                            <button class="btn btn-outline-secondary calendar" (click)="d.toggle()"
-                                type="button"></button>
+                    <div class="row">
+                        <div class="form-group col-lg-6">
+                            <label for="projectdescrption">Project Description </label>
+                            <textarea type="projectdescrption" class="form-control" id="txtProject"
+                                placeholder="Enter project description" maxlength="200"></textarea>
                         </div>
-                    </div>
 
-
-                    <div class="form-group col-lg-6">
-                        <label for="completionDate">Completion Date </label>
-                        <div class="input-group">
-                            <input class="form-control" placeholder="DD/MM/YYYY" name="dp" ngbDatepicker
-                                #p="ngbDatepicker" id="compDate" mask="00/00/0000" autocomplete="off">
-                            <button class="btn btn-outline-secondary calendar" (click)="p.toggle()"
-                                type="button"></button>
-
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="form-group col-lg-6">
-                        <label for="budgetAmount">Budget Amount </label>
-                        <div class="my-1">
-                            <label class="sr-only" for="budgetAmount">Amount</label>
-                            <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <div class="input-group-text">₹</div>
-                                </div>
-                                <input type="text" class="form-control" id="budgetAmount" placeholder="Amount"
-                                    autocomplete="off" mask="000000">
+                        <div class="form-group col-lg-6">
+                            <div class="form-group col-lg-6">
+                                <label for="technology">Technology </label>
+                            </div>
+                            <div class="btn-group" data toggle="buttons">
+                                <label class="btn btn-primary-active">
+                                    <input type="checkbox" checked autocomplete="off"> Angular
+                                </label>
+                                <label class="btn btn-primary-active">
+                                    <input type="checkbox" autocomplete="off"> .NET Core
+                                </label>
+                                <label class="btn btn-primary-active">
+                                    <input type="checkbox" autocomplete="off"> HTML
+                                </label>
+                                <label class="btn btn-primary-active">
+                                    <input type="checkbox" autocomplete="off"> CSS
+                                </label>
+                                <label class="btn btn-primary-active">
+                                    <input type="checkbox" autocomplete="off"> Javascript
+                                </label>
                             </div>
                         </div>
                     </div>
 
                     <div class="row">
-                        <div class="form-group col-lg-12">
-                            <input type="button" class="btn btn-success" value="Save"/>
-                            <input type="button" class="btn btn-outline-primary" value="Cancel" 
-                                (click)="isShown = true"/>
+                        <div class="form-group col-lg-4">
+                            <label for="project type">Project Type </label>
+                            <select name="month" class="form-select col-lg-12"
+                                (change)="onProjectChange($event.target)">
+                                <option *ngFor="let type of types" [value]="type.id">{{ type.name }}</option>
+                            </select>
+                        </div>
+
+                        <div class="form-group col-lg-4">
+                            <label for="duration">Duration </label>
+                            <select name="duration" class="form-select col-lg-12"
+                                (change)="onDurationChange($event.target)">
+                                <option *ngFor="let duration of durations" [value]="duration.id"> {{duration.name}}
+                                </option>
+                            </select>
+                        </div>
+
+                        <div class="form-group col-lg-4">
+                            <label for="status">Status </label>
+                            <select name="status" class="form-select col-lg-12"
+                                (change)="onStatusChange($event.target)">
+                                <option *ngFor="let status of status" [value]="status.id">{{status.name}}
+                                </option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="form-group col-lg-4">
+                            <label for="startDate">Start Date </label>
+                            <div class="input-group">
+                                <input class="form-control" placeholder="DD/MM/YYYY" name="dp" ngbDatepicker
+                                    #d="ngbDatepicker" id="startDate" mask="00/00/0000" autocomplete="off">
+                                <button class="btn btn-outline-secondary calendar" (click)="d.toggle()"
+                                    type="button"></button>
+                            </div>
+                        </div>
+
+                        <div class="form-group col-lg-4">
+                            <label for="completionDate">Completion Date </label>
+                            <div class="input-group">
+                                <input class="form-control" placeholder="DD/MM/YYYY" name="dp" ngbDatepicker
+                                    #p="ngbDatepicker" id="compDate" mask="00/00/0000" autocomplete="off">
+                                <button class="btn btn-outline-secondary calendar" (click)="p.toggle()"
+                                    type="button"></button>
+                            </div>
+                        </div>
+
+                        <div class="form-group col-lg-4">
+                            <label for="budgetAmount">Budget Amount </label>
+                            <div class="my-1">
+                                <label class="sr-only" for="budgetAmount">Amount</label>
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <div class="input-group-text">₹</div>
+                                    </div>
+                                    <input type="text" class="form-control" id="budgetAmount" placeholder="XXXXXXX"
+                                        autocomplete="off" mask="000000">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row submit-buttons">
+                            <div class="form-group col-lg-12">
+                                <input type="submit" class="btn btn-success" value="Save" />
+                                <input type="button" class="btn btn-outline-primary" value="Cancel"
+                                    (click)="isShown = true" />
+                            </div>
                         </div>
                     </div>
                 </div>
